Add responsive rules for < 424

--- a/index.html
+++ b/index.html
@@ -136,9 +136,7 @@
           </p>
 
           <svg
-            class="d-block mx-auto"
-            width="309.377"
-            height="117.597"
+            class="d-block mx-auto congrats-ticket"
             viewBox="0 0 309.377 117.597"
           >
             <g transform="translate(10845.688 42.969)">
