Create invitation section

--- a/index.html
+++ b/index.html
@@ -20,6 +20,7 @@
     <link rel="stylesheet" href="./assets/css/block/banner.css" />
     <link rel="stylesheet" href="./assets/css/block/thanks.css" />
     <link rel="stylesheet" href="./assets/css/block/congrats.css" />
+    <link rel="stylesheet" href="./assets/css/block/invitation.css" />
   </head>
   <body>
     <aside class="topbar d-flex align-items-center justify-content-center">
@@ -364,9 +365,71 @@
           </a>
         </section>
 
-        <div class="py-5"></div>
-        <div class="py-5"></div>
-        <div class="py-5"></div>
+        <section class="invitation d-flex flex-column text-center">
+          <h2 class="title">
+            Convidamos você
+            <br />
+            para fazer parte
+            <br />
+            do Clube VIP
+            <br />
+            Doutor Nature
+          </h2>
+          <p class="invitation-text">
+            Ao entrar para o Clube Doutor Nature,
+            <br />
+            você terá acesso completo e vitalício
+            <br />
+            às nossas séries essenciais, aliando
+            <br />
+            prevenção e também tratamento
+            <br />
+            alternativo contra dezenas de
+            <br />
+            problemas de saúde.
+            <br />
+            <br />
+            Em instantes, você poderá acessar
+            <br />
+            o conteúdo completo das séries
+            <br />
+            essenciais da Doutor Nature:
+          </p>
+
+          <h2 class="title">
+            E, como membro do Clube
+            <br />
+            Doutor Nature, você
+            <br />
+            também vai ter acesso
+            <br />
+            a TODAS as séries
+            <br />
+            essenciais que
+            <br />
+            lançarmos futuramente
+          </h2>
+
+          <p class="invitation-text">
+            Nossos pesquisadores caçam grandes
+            <br />
+            descobertas da ciência no campo
+            <br />
+            da medicina alternativa natural…
+            <br />
+            é por isso que temos uma equipe
+            <br />
+            ampla de especialistas que vasculham
+            <br />
+            universidades, centros de pesquisa
+            <br />
+            e publicações de relevância
+            <br />
+            internacional. Nada escapa aos
+            <br />
+            olhos de nossos experts.
+          </p>
+        </section>
       </div>
     </main>
   </body>
