Add products section

--- a/index.html
+++ b/index.html
@@ -21,6 +21,7 @@
     <link rel="stylesheet" href="./assets/css/block/thanks.css" />
     <link rel="stylesheet" href="./assets/css/block/congrats.css" />
     <link rel="stylesheet" href="./assets/css/block/invitation.css" />
+    <link rel="stylesheet" href="./assets/css/block/products.css" />
   </head>
   <body>
     <aside class="topbar d-flex align-items-center justify-content-center">
@@ -365,7 +366,7 @@
           </a>
         </section>
 
-        <section class="invitation d-flex flex-column text-center">
+        <section class="invitation d-flex flex-column text-center triangle">
           <h2 class="title">
             Convidamos você
             <br />
@@ -429,6 +430,168 @@
             <br />
             olhos de nossos experts.
           </p>
+        </section>
+
+        <section class="products">
+          <h2 class="title">
+            Veja a seguir um
+            <br />
+            breve resumo
+            <br />
+            de algumas
+            <br />
+            de nossas séries
+            <br />
+            essenciais:
+          </h2>
+
+          <ul class="products-list list-unstyled m-0 text-center">
+            <li>
+              <img
+                class="product-img"
+                src="./assets/img/protocolo-1.png"
+                alt="Protocolo Fim do Diabetes"
+              />
+              <h3 class="product-title">
+                Protocolo
+                <br />
+                Fim do diabetes*
+              </h3>
+              <h4 class="product-subtitle">- Por Dr. Rafael Freitas -</h4>
+              <p class="product-description">
+                Sistema exclusivo para prevenir
+                <br />
+                e até <strong>reverter o Diabetes Tipo II.</strong>
+              </p>
+            </li>
+            <li>
+              <img
+                class="product-img"
+                src="./assets/img/protocolo-2.png"
+                alt="Protocolo Anticâncer"
+              />
+              <h3 class="product-title">
+                Protocolo
+                <br />
+                Anticâncer*
+              </h3>
+              <h4 class="product-subtitle">- Por Dr. Rafael Freitas -</h4>
+              <p class="product-description">
+                O protocolo mais inovador (que
+                <br />
+                traz terapias não divulgadas)
+                <br />
+                que estão sendo utilizadas
+                <br />
+                para
+                <strong>
+                  prevenir, tratar e até
+                  <br />
+                  obter a remissão do câncer.
+                </strong>
+              </p>
+            </li>
+            <li>
+              <img
+                class="product-img"
+                src="./assets/img/protocolo-3.png"
+                alt="Protocolo Liberte Sua Coluna"
+              />
+              <h3 class="product-title">
+                Protocolo Liberte
+                <br />
+                Sua Coluna*
+              </h3>
+              <h4 class="product-subtitle">- Por Dr. Wilson Garves -</h4>
+              <p class="product-description">
+                Dr. Wilson Garves apresenta sua
+                <br />
+                técnica israelense (que pode ser
+                <br />
+                praticada em casa) e em apenas
+                <br />
+                8 minutos,
+                <strong>
+                  é capaz de desligar
+                  <br />
+                  as Dores Crônicas do corpo.
+                </strong>
+              </p>
+            </li>
+            <li>
+              <img
+                class="product-img"
+                src="./assets/img/protocolo-4.png"
+                alt="Protocolo Homem de Alta Performance"
+              />
+              <h3 class="product-title">
+                Protocolo Homem
+                <br />
+                <span class="text-lowercase">de</span>
+                alta performance*
+              </h3>
+              <h4 class="product-subtitle">- Por Dr. Rafael Freitas -</h4>
+              <p class="product-description">
+                Programa completo exclusivo
+                <br />
+                para Homens que desejam
+                <br />
+                recuperar a virilidade e
+                <strong>
+                  aumentar
+                  <br />
+                  a testosterona em 230%
+                  <br />
+                  em apenas 59 dias.
+                </strong>
+              </p>
+            </li>
+            <li>
+              <img
+                class="product-img"
+                src="./assets/img/protocolo-5.png"
+                alt="Protocolo Alzheimer"
+              />
+              <h3 class="product-title">Protocolo Alzheimer*</h3>
+              <h4 class="product-subtitle">- Por Dr. Rafael Freitas -</h4>
+              <p class="product-description">
+                <strong>
+                  O plano definitivo capaz de
+                  <br />
+                  regredir o Alzheimer em 9
+                  <br />
+                  de 10 pacientes.
+                </strong>
+                Um programa
+                <br />
+                para frear a perda da memória
+                <br />
+                e recuperar uma mente jovem
+              </p>
+            </li>
+            <li>
+              <img
+                class="product-img"
+                src="./assets/img/protocolo-6.png"
+                alt="Protocolo Bomba de Imunidade"
+              />
+              <h3 class="product-title">
+                Protocolo Bomba
+                <br />
+                de Imunidade*
+              </h3>
+              <h4 class="product-subtitle">- Por Dr. Rafael Freitas -</h4>
+              <p class="product-description">
+                O <u>plano mais efetivo</u> para
+                <br />
+                transformar essa pandemia
+                <br />
+                na oportunidade para construir
+                <br />
+                um corpo <strong>à prova de doença</strong>.
+              </p>
+            </li>
+          </ul>
         </section>
       </div>
     </main>
