Create products section

--- a/index.html
+++ b/index.html
@@ -432,7 +432,7 @@
           </p>
         </section>
 
-        <section class="products">
+        <section class="products triangle">
           <h2 class="title">
             Veja a seguir um
             <br />
@@ -592,6 +592,72 @@
               </p>
             </li>
           </ul>
+
+          <section class="bonus text-center">
+            <h2 class="title text-uppercase">
+              Você ainda ganha conteúdo bonus!
+            </h2>
+
+            <div class="bonus-item">
+              <h3 class="bonus-title">Bônus #1:</h3>
+              <h4 class="bonus-subtitle">Estante digital</h4>
+              <p class="bonus-description">
+                Acesso vitalício a TODOS os nossos
+                <br />
+                Livros Digitais. Seleção de títulos
+                <br />
+                com recomendações contra refluxo,
+                <br />
+                Alzheimer, câncer e quaisquer outros
+                <br />
+                problemas de saúde, escritos pelas
+                <br />
+                maiores autoridades de saúde natural.
+              </p>
+            </div>
+
+            <div class="bonus-item">
+              <h3 class="bonus-title">Bônus #2:</h3>
+              <h4 class="bonus-subtitle">Dossiê caixa preta</h4>
+              <p class="bonus-description">
+                Conteúdo premium do Dr. Rafael,
+                <br />
+                com as recomendações mais recentes
+                <br />
+                da medicina natural. Este é nosso
+                <br />
+                relatório de saúde mais frequente,
+                <br />
+                a cada quinze dias uma nova edição
+                <br />
+                será entregue em seu e-mail.
+              </p>
+            </div>
+
+            <div class="bonus-item">
+              <h3 class="bonus-title">Bônus #3:</h3>
+              <h4 class="bonus-subtitle">
+                Programas
+                <br />
+                de benefícios vip*
+              </h4>
+              <p class="bonus-description">
+                Plano de descontos, parcerias
+                <br />
+                e privilégios que somente
+                <br />
+                os VIPS têm acesso.
+              </p>
+            </div>
+
+            <footer class="bonus-footer">
+              <span>
+                *Produtos em fase de pré-lançamento,
+                <br />
+                serão lançados em breve.
+              </span>
+            </footer>
+          </section>
         </section>
       </div>
     </main>
