Add only today section

--- a/index.html
+++ b/index.html
@@ -22,6 +22,8 @@
     <link rel="stylesheet" href="./assets/css/block/congrats.css" />
     <link rel="stylesheet" href="./assets/css/block/invitation.css" />
     <link rel="stylesheet" href="./assets/css/block/products.css" />
+    <link rel="stylesheet" href="./assets/css/block/prices.css" />
+    <link rel="stylesheet" href="./assets/css/block/only-today.css" />
   </head>
   <body>
     <aside class="topbar d-flex align-items-center justify-content-center">
@@ -658,6 +660,155 @@
               </span>
             </footer>
           </section>
+        </section>
+
+        <section class="prices text-center triangle">
+          <h5 class="prices-subtitle">
+            Nós te entregamos o equivalente
+            <br />
+            a milhares de reais em conteúdos
+            <br />
+            da Doutor Nature pelos próximos
+            <br />
+            anos. Sem que você tenha que
+            <br />
+            pagar o valor equivalente por isso.
+          </h5>
+
+          <h2 class="title">
+            Se você fosse
+            <br />
+            assinar todas as
+            <br />
+            séries essenciais
+            <br />
+            separadamente,
+            <br />
+            na modalidade
+            <br />
+            vitalícia, investiria
+            <br />
+            um valor
+            <br />
+            de <strong>R$ 7.395,20:</strong>
+          </h2>
+
+          <ul class="list-unstyled m-0">
+            <li>
+              <h3 class="price-title">Protocolo Fim da Diabetes</h3>
+              <h4 class="price-subtitle">(Por Dr. Rafael Freitas)</h4>
+              <h3 class="price-value">R$ 1.297</h3>
+            </li>
+            <li>
+              <h3 class="price-title">Protocolo Anticâncer</h3>
+              <h4 class="price-subtitle">(Por Dr. Rafael Freitas)</h4>
+              <h3 class="price-value">R$ 1.110</h3>
+            </li>
+            <li>
+              <h3 class="price-title">Protocolo Liberte Sua Coluna</h3>
+              <h4 class="price-subtitle">(Por Dr. Wilson Garves)</h4>
+              <h3 class="price-value">R$ 1.297</h3>
+            </li>
+            <li>
+              <h3 class="price-title">Protocolo Bomba de Imunidade</h3>
+              <h4 class="price-subtitle">(Por Dr. Rafael Freitas)</h4>
+              <h3 class="price-value">R$ 997</h3>
+            </li>
+            <li>
+              <h3 class="price-title">Protocolo Alzheimer</h3>
+              <h4 class="price-subtitle">(Por Dr. Rafael Freitas)</h4>
+              <h3 class="price-value">R$ 1.297</h3>
+            </li>
+            <li>
+              <h3 class="price-title">Protocolo Homem de Alta Performance</h3>
+              <h4 class="price-subtitle">(Por Dr. Rafael Freitas)</h4>
+              <h3 class="price-value">R$ 597</h3>
+            </li>
+            <li>
+              <h3 class="price-title">Estante Digital</h3>
+              <h4 class="price-subtitle">(Por Vários Autores</h4>
+              <h3 class="price-value">R$ 897</h3>
+            </li>
+            <li>
+              <h3 class="price-title">Dossiê Caixa Preta</h3>
+              <h4 class="price-subtitle">(Por Vários Autores)</h4>
+              <h3 class="price-value">R$ 247</h3>
+            </li>
+            <li>
+              <h3 class="price-title">Programa Benefícios e Descontos VIP</h3>
+              <h3 class="price-value">R$ 750</h3>
+            </li>
+          </ul>
+        </section>
+
+        <section class="today text-center triangle">
+          <h3 class="today-text">
+            Somente Hoje
+            <br />
+            Nesta Página Exclusiva
+          </h3>
+
+          <h2 class="today-price">
+            <small class="d-block"> 12x de: </small>
+            <span> R$ 249,00 </span>
+          </h2>
+
+          <h5 class="today-text">5% de desconto no pagamento à vista</h5>
+          <h5 id="vitalicia" class="today-text">
+            Assinatura vitalícia, sem taxas de
+            <br />
+            renovação, reaustes de preço ou
+            <br />
+            vencimento da sua assinatura.
+          </h5>
+
+          <h5 class="today-text text-uppercase" id="valor">
+            Valor de todos os produtos
+            <br />
+            essenciais: <span>R$ 7.395,20</span>
+          </h5>
+
+          <h3 class="credit text-uppercase">
+            <span>
+              Crédito disponível
+              <br />
+              Para você: R$ 4.556,60
+            </span>
+          </h3>
+
+          <hr />
+
+          <h3 class="today-final-price text-uppercase">
+            Preço final
+            <br />
+            para se tornar
+            <br />
+            um membro
+            <br />
+            vip do clube
+            <br />
+            Doutor Nature:
+
+            <span>12x R$ 249</span>
+          </h3>
+
+          <p class="today-text">
+            <strong class="d-block">Acesso a:</strong>
+            7 séries essenciais da Doutor
+            <br />
+            Nature + Qualquer série essencial
+            <br />
+            que lançarmos futuramente
+          </p>
+
+          <a href="#" class="button text-uppercase">
+            Sim! Quero fazer parte deste grupo restrito
+          </a>
+
+          <a href="#" class="link">
+            Obrigado(a), não vou aproveitar esta oportunidade única. Quero
+            acessar a Área do Assinante agora.
+          </a>
         </section>
       </div>
     </main>
