--- a/index.html
+++ b/index.html
@@ -27,6 +27,8 @@
     <link rel="stylesheet" href="./assets/css/block/we-do.css" />
     <link rel="stylesheet" href="./assets/css/block/us.css" />
     <link rel="stylesheet" href="./assets/css/block/for-you.css" />
+    <link rel="stylesheet" href="./assets/css/block/items.css" />
+    <link rel="stylesheet" href="./assets/css/block/final.css" />
   </head>
   <body>
     <aside class="topbar d-flex align-items-center justify-content-center">
@@ -393,8 +395,8 @@
             alternativo contra dezenas de
             <br />
             problemas de saúde.
-            <br />
-            <br />
+            <br class="d-block" />
+            <br class="d-block" />
             Em instantes, você poderá acessar
             <br />
             o conteúdo completo das séries
@@ -1108,8 +1110,8 @@
             <br />
             abordagem inovadora.
 
-            <br />
-            <br />
+            <br class="d-block" />
+            <br class="d-block" />
             <br />
 
             <span class="text-uppercase">
@@ -1122,13 +1124,13 @@
               combater doenças.
             </span>
 
-            <br />
-            <br />
+            <br class="d-block" />
+            <br class="d-block" />
 
             <span class="text-uppercase">Sem remédios, sem cirurgias</span>
 
-            <br />
-            <br />
+            <br class="d-block" />
+            <br class="d-block" />
             <br />
 
             Somos mais de 80 pessoas na
@@ -1252,6 +1254,160 @@
           <div class="timer mt-5">
             <img src="./assets/img/circle.svg" class="img-fluid" />
           </div>
+        </section>
+
+        <section class="items text-center">
+          <h2 class="title">
+            Tenha agora
+            <br />
+            mesmo Acesso
+            <br />
+            Vitalício às séries:
+          </h2>
+
+          <ul class="list-unstyled m-0">
+            <li>
+              <h3 class="item-title">Protocolo Fim da Diabetes</h3>
+              <h4 class="item-subtitle">(Por Dr. Rafael Freitas)</h4>
+              <h4 class="item-price">R$ 1.297</h4>
+              <span class="item-label">incluso</span>
+            </li>
+            <li>
+              <h3 class="item-title">Protocolo Anticâncer</h3>
+              <h4 class="item-subtitle">(Por Dr. Rafael Freitas)</h4>
+              <h4 class="item-price">R$ 1.110</h4>
+              <span class="item-label">incluso</span>
+            </li>
+            <li>
+              <h3 class="item-title">Protocolo Liberte Sua Coluna</h3>
+              <h4 class="item-subtitle">(Por Dr. Wilson Garves)</h4>
+              <h4 class="item-price">R$ 997</h4>
+              <span class="item-label">incluso</span>
+            </li>
+            <li>
+              <h3 class="item-title">Protocolo Bomba de Imunidade</h3>
+              <h4 class="item-subtitle">(Por Dr. Rafael Freitas)</h4>
+              <h4 class="item-price">R$ 597</h4>
+              <span class="item-label">incluso</span>
+            </li>
+            <li>
+              <h3 class="item-title">Protocolo Alzheimer</h3>
+              <h4 class="item-subtitle">(Por Dr. Rafael Freitas)</h4>
+              <h4 class="item-price">R$ 1.297</h4>
+              <span class="item-label">incluso</span>
+            </li>
+            <li>
+              <h3 class="item-title">Protocolo Homem de Alta Performance</h3>
+              <h4 class="item-subtitle">(Por Dr. Rafael Freitas)</h4>
+              <h4 class="item-price">R$ 597</h4>
+              <span class="item-label">incluso</span>
+            </li>
+            <li>
+              <h3 class="item-title">Estante Digital</h3>
+              <h4 class="item-subtitle">(Por Vários Autores)</h4>
+              <h4 class="item-price">R$ 897</h4>
+              <span class="item-label">incluso</span>
+            </li>
+            <li>
+              <h3 class="item-title">Dossiê Caixa Preta</h3>
+              <h4 class="item-subtitle">(Por Vários Autores)</h4>
+              <h4 class="item-price">R$ 247</h4>
+              <span class="item-label">incluso</span>
+            </li>
+            <li>
+              <h3 class="item-title">Programa Benefícios e Descontos VIP</h3>
+              <h4 class="item-price">R$ 750</h4>
+              <span class="item-label">incluso</span>
+            </li>
+          </ul>
+        </section>
+
+        <section class="final text-center">
+          <h2 class="title">
+            <strong class="d-block text-uppercase">
+              Valor total
+              <br />
+              De R$ 7.657,70
+            </strong>
+
+            (Se você fosse
+            <br />
+            pagar o preço cheio
+            <br />
+            por cauda um das
+            <br />
+            11 assinaturas
+            <br />
+            do Clube Doutor
+            <br />
+            Nature)
+          </h2>
+
+          <h3 class="final-subtitle">
+            + A Cláusula
+            <br />
+            de Satisfação
+            <br />
+            [7 dias de acesso
+            <br />
+            sem compromisso]
+          </h3>
+
+          <img
+            src="./assets/img/certificate.svg"
+            alt="Garantia de 7 dias"
+            class="warranty img-fluid"
+          />
+
+          <h2 class="total">
+            <small>12x de:</small>
+            <span> R$ 249,00 </span>
+          </h2>
+
+          <p>*5% de desconto no pagamento à vista</p>
+
+          <p id="info">
+            Para ter acesso imediato a esta
+            <br />
+            oferta exclusiva, clique agora
+            <br />
+            no botão abaixo!
+            <br class="d-block" />
+            <br class="d-block" />
+            Esperamos que esse seja um
+            <br />
+            grande passo para uma vida
+            <br />
+            saudável que você tanto procura.
+            <br class="d-block" />
+            <br class="d-block" />
+            Estou convencido que este é o
+            <br />
+            investimento mais certeiro que
+            <br />
+            pode fazer por você e sua família
+            <br />
+            pelas próximas décadas.
+            <br class="d-block" />
+            <br class="d-block" />
+
+            Te esperamos no Clube!
+          </p>
+
+          <a href="#" class="button text-uppercase">
+            Sim! Quero fazer parte deste grupo restrito
+          </a>
+
+          <a href="#" class="text-uppercase final-link">
+            Quero validar meu
+            <br class="d-block" />
+            cupom de desconto
+          </a>
+
+          <a href="#" class="link">
+            Obrigado(a), não vou aproveitar esta oportunidade única. Quero
+            acessar a Área do Assinante agora.
+          </a>
         </section>
       </div>
     </main>
