Add container to top

--- a/index.html
+++ b/index.html
@@ -32,58 +32,62 @@
     <link rel="stylesheet" href="./assets/css/block/timer.css" />
   </head>
   <body>
-    <aside class="topbar d-flex align-items-center justify-content-center">
-      <img
-        src="./assets/img/logo.svg"
-        alt="Logomarca Doutor Nature"
-        class="topbar-logo img-fluid"
-      />
-    </aside>
+    <div class="container top-container">
+      <aside class="topbar d-flex align-items-center justify-content-center">
+        <img
+          src="./assets/img/logo.svg"
+          alt="Logomarca Doutor Nature"
+          class="topbar-logo img-fluid"
+        />
+      </aside>
 
-    <nav class="steps">
-      <div class="container">
-        <div class="steps d-flex align-items-stretch">
-          <div class="step">
-            <span>Pedido</span>
-          </div>
-          <div class="step">
-            <span>Compra<br class="d-block" />efetuada</span>
-          </div>
-          <div class="step active">
-            <span>Você está aqui</span>
-          </div>
-          <div class="step">
-            <span>Acesso ao<br class="d-block" />produto</span>
+      <nav class="steps">
+        <div class="container">
+          <div class="steps d-flex align-items-stretch">
+            <div class="step">
+              <span>Pedido</span>
+            </div>
+            <div class="step">
+              <span>Compra<br class="d-block" />efetuada</span>
+            </div>
+            <div class="step active">
+              <span>Você está aqui</span>
+            </div>
+            <div class="step">
+              <span>Acesso ao<br class="d-block" />produto</span>
+            </div>
           </div>
         </div>
-      </div>
-    </nav>
+      </nav>
 
-    <header class="banner d-flex flex-column align-items-center">
-      <div class="banner-icon d-flex align-items-center justify-content-center">
-        <svg viewBox="0 0 44.346 68.681">
-          <path
-            d="M134.861,18.833a6.028,6.028,0,0,0-7.994-5.685l.007-3.7a6.015,6.015,0,0,0-6.015-6.03h-.087a5.975,5.975,0,0,0-2.362.484A6.022,6.022,0,0,0,112.775,0h-.107a6.026,6.026,0,0,0-5.743,4.223,5.982,5.982,0,0,0-2.255-.44H104.6A6.022,6.022,0,0,0,98.586,9.8V21.445a6.077,6.077,0,0,0-8.07,5.7V46.518a22.184,22.184,0,0,0,22.159,22.159c11.922.247,22.422-10.268,22.159-22.189l-.007-5.253ZM130.8,46.493c.215,9.751-8.373,18.353-18.126,18.151A18.146,18.146,0,0,1,94.549,46.518V27.149a2.019,2.019,0,1,1,4.038,0v9.808a2.036,2.036,0,0,0,1.384,1.952A15.61,15.61,0,0,1,110.7,53.758a2.016,2.016,0,0,0,4.033,0A19.632,19.632,0,0,0,102.619,35.6V9.8a2.017,2.017,0,0,1,4.033,0c0,4.246,0,13.689,0,17.824a2.016,2.016,0,0,0,4.033,0V6.015a2.05,2.05,0,0,1,3.493-1.4,1.97,1.97,0,0,1,.579,1.405c-.012,6.151-.031,15.547-.042,21.615a2.016,2.016,0,0,0,2.013,2.02h0a2.016,2.016,0,0,0,2.016-2.012c.008-4.34.027-13.98.041-18.209a2.039,2.039,0,0,1,3.473-1.4,1.97,1.97,0,0,1,.579,1.406c-.011,5.423-.031,15.045-.041,20.426a2.016,2.016,0,0,0,2.012,2.02h0a2.016,2.016,0,0,0,2.016-2.012c.007-.556.005-8.352.03-11.062a1.983,1.983,0,0,1,3.965.011l-.035,22.407Z"
-            transform="translate(-90.516)"
-            fill="currentColor"
-          />
-        </svg>
-      </div>
-      <h2 class="banner-title">Espere!</h2>
-      <h3 class="banner-subtitle">Não saia dessa página</h3>
-      <span class="banner-footer">Arraste para baixo</span>
+      <header class="banner d-flex flex-column align-items-center">
+        <div
+          class="banner-icon d-flex align-items-center justify-content-center"
+        >
+          <svg viewBox="0 0 44.346 68.681">
+            <path
+              d="M134.861,18.833a6.028,6.028,0,0,0-7.994-5.685l.007-3.7a6.015,6.015,0,0,0-6.015-6.03h-.087a5.975,5.975,0,0,0-2.362.484A6.022,6.022,0,0,0,112.775,0h-.107a6.026,6.026,0,0,0-5.743,4.223,5.982,5.982,0,0,0-2.255-.44H104.6A6.022,6.022,0,0,0,98.586,9.8V21.445a6.077,6.077,0,0,0-8.07,5.7V46.518a22.184,22.184,0,0,0,22.159,22.159c11.922.247,22.422-10.268,22.159-22.189l-.007-5.253ZM130.8,46.493c.215,9.751-8.373,18.353-18.126,18.151A18.146,18.146,0,0,1,94.549,46.518V27.149a2.019,2.019,0,1,1,4.038,0v9.808a2.036,2.036,0,0,0,1.384,1.952A15.61,15.61,0,0,1,110.7,53.758a2.016,2.016,0,0,0,4.033,0A19.632,19.632,0,0,0,102.619,35.6V9.8a2.017,2.017,0,0,1,4.033,0c0,4.246,0,13.689,0,17.824a2.016,2.016,0,0,0,4.033,0V6.015a2.05,2.05,0,0,1,3.493-1.4,1.97,1.97,0,0,1,.579,1.405c-.012,6.151-.031,15.547-.042,21.615a2.016,2.016,0,0,0,2.013,2.02h0a2.016,2.016,0,0,0,2.016-2.012c.008-4.34.027-13.98.041-18.209a2.039,2.039,0,0,1,3.473-1.4,1.97,1.97,0,0,1,.579,1.406c-.011,5.423-.031,15.045-.041,20.426a2.016,2.016,0,0,0,2.012,2.02h0a2.016,2.016,0,0,0,2.016-2.012c.007-.556.005-8.352.03-11.062a1.983,1.983,0,0,1,3.965.011l-.035,22.407Z"
+              transform="translate(-90.516)"
+              fill="currentColor"
+            />
+          </svg>
+        </div>
+        <h2 class="banner-title">Espere!</h2>
+        <h3 class="banner-subtitle">Não saia dessa página</h3>
+        <span class="banner-footer">Arraste para baixo</span>
 
-      <div
-        class="banner-scrolldown d-flex align-items-center justify-content-center"
-      >
-        <svg style="width: 24px; height: 24px" viewBox="0 0 24 24">
-          <path
-            fill="currentColor"
-            d="M7.41,8.58L12,13.17L16.59,8.58L18,10L12,16L6,10L7.41,8.58Z"
-          />
-        </svg>
-      </div>
-    </header>
+        <div
+          class="banner-scrolldown d-flex align-items-center justify-content-center"
+        >
+          <svg style="width: 24px; height: 24px" viewBox="0 0 24 24">
+            <path
+              fill="currentColor"
+              d="M7.41,8.58L12,13.17L16.59,8.58L18,10L12,16L6,10L7.41,8.58Z"
+            />
+          </svg>
+        </div>
+      </header>
+    </div>
 
     <main class="text-center">
       <div class="container">
